force-app/main/default/objects/Fidelisation__c/Fidelisation__c.object-meta.xml
<CustomObject>
    <label>Fidélisation</label>
    <nameField>
        <displayFormat>FID-{0000}</displayFormat>
        <label>Nom de Fidélisation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fidélisations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>