force-app/main/default/objects/Fidelisation__c/fields/ACC_EXTId_SIPanel__c.field-meta.xml
<CustomField>
    <fullName>ACC_EXTId_SIPanel__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Numéro du foyer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>