force-app/main/default/objects/Fidelisation__c/fields/Commentaire__c.field-meta.xml
<CustomField>
    <fullName>Commentaire__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>Commentaire</label>
    <type>TextArea</type>
</CustomField>