force-app/main/default/objects/Fidelisation__c/fields/Composition_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Composition_du_foyer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Composition du foyer</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Ce membre de foyer ne fait pas partie de ce foyer ou il n&apos;existe pas</errorMessage>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Foyer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fidélisations</relationshipLabel>
    <relationshipName>Fidelisations</relationshipName>
    <type>Lookup</type>
</CustomField>