force-app/main/default/objects/Fidelisation__c/fields/Date_de_traitement__c.field-meta.xml
<CustomField>
    <fullName>Date_de_traitement__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de traitement</label>
    <type>Date</type>
</CustomField>