force-app/main/default/objects/Fidelisation__c/fields/Foyer__c.field-meta.xml
<CustomField>
    <fullName>Foyer__c</fullName>
    <label>Foyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fidélisations</relationshipLabel>
    <relationshipName>Fid_lisations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>