force-app/main/default/objects/Fidelisation__c/fields/Foyer_paneliste__c.field-meta.xml
<CustomField>
    <fullName>Foyer_paneliste__c</fullName>
    <label>Foyer panéliste</label>
    <referenceTo>Foyer_paneliste__c</referenceTo>
    <relationshipLabel>Fidélisations</relationshipLabel>
    <relationshipName>Fidelisations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>