force-app/main/default/objects/Fidelisation__c/fields/Individu_paneliste__c.field-meta.xml
<CustomField>
    <fullName>Individu_paneliste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individu Panéliste</label>
    <referenceTo>Individu_Paneliste__c</referenceTo>
    <relationshipLabel>Fidélisations</relationshipLabel>
    <relationshipName>Fid_lisations</relationshipName>
    <type>Lookup</type>
</CustomField>