force-app/main/default/objects/Fidelisation__c/fields/Motif_de_credit__c.field-meta.xml
<CustomField>
    <fullName>Motif_de_credit__c</fullName>
    <label>Motif de crédit</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_de_mouvement__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Bonus Installation</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Bonus mensuel TV</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Recensement</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Noël</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Vacances été</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Anniv entrée Panel</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Bonus mensuel web</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Quiz Règle OR</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Smile Me</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Defreeze</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Rentrée</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Auto désinstallation</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Anniv panéliste</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Pilote</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Points mensuels AIP</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Badge Bronze jeune</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Badge Argent jeune</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Badge Or jeune</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Badge Platine jeune</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Badge Bronze 25+</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Badge Argent 25+</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Badge Or 25+</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Badge Platine 25+</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Parrainage Parrain</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Parrainage Filleul</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Dédommagement</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Autre crédit</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Crédit Energie</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Noce MM</label>
            </value>
            <value>
                <fullName>Commande</fullName>
                <isActive>false</isActive>
                <label>Commande</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>