force-app/main/default/objects/Fidelisation__c/fields/Origine_de_la_commande__c.field-meta.xml
<CustomField>
    <fullName>Origine_de_la_commande__c</fullName>
    <label>Origine de la commande</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Courrier entrant</fullName>
            </value>
            <value>
                <fullName>Web formulaire</fullName>
            </value>
            <value>
                <fullName>Email entrant</fullName>
            </value>
            <value>
                <fullName>Application M&amp;MOI</fullName>
            </value>
            <value>
                <fullName>Adresse e-mail</fullName>
            </value>
            <value>
                <fullName>Appel entrant</fullName>
                <isActive>false</isActive>
                <label>Appel entrant</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>