force-app/main/default/objects/Fidelisation__c/fields/Points_debites__c.field-meta.xml
<CustomField>
    <fullName>Points_debites__c</fullName>
    <label>Points Débités</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>