force-app/main/default/objects/Fidelisation__c/fields/Requete__c.field-meta.xml
<CustomField>
    <fullName>Requete__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requête</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Fidélisations</relationshipLabel>
    <relationshipName>Fidelisations</relationshipName>
    <type>Lookup</type>
</CustomField>