force-app/main/default/objects/Fidelisation__c/fields/Solde_de_points_a_creation__c.field-meta.xml
<CustomField>
    <fullName>Solde_de_points_a_creation__c</fullName>
    <label>Solde de points</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>