force-app/main/default/objects/Fidelisation__c/fields/Statut_de_commande__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_commande__c</fullName>
    <label>Statut de commande</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enregistrée</fullName>
                <default>true</default>
                <label>Enregistrée</label>
            </value>
            <value>
                <fullName>En cours de traitement</fullName>
            </value>
            <value>
                <fullName>Expédiée</fullName>
            </value>
            <value>
                <fullName>Annulée</fullName>
            </value>
            <value>
                <fullName>Clôturé</fullName>
                <isActive>false</isActive>
                <label>Clôturé</label>
            </value>
            <value>
                <fullName>En cours logistique</fullName>
                <isActive>false</isActive>
                <label>En cours logistique</label>
            </value>
            <value>
                <fullName>Envoyé</fullName>
                <isActive>false</isActive>
                <label>Envoyé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>