force-app/main/default/objects/Fidelisation__c/fields/Type_de_mouvement__c.field-meta.xml
<CustomField>
    <fullName>Type_de_mouvement__c</fullName>
    <label>Type de mouvement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Commande</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Crédit automatique</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Crédit exceptionnel</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Crédit manuel</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Débit automatique</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Débit des points fin de contrat</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Débit exceptionnel</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Débit manuel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>