force-app/main/default/objects/Fidelisation__c/fields/Type_de_panel__c.field-meta.xml
<CustomField>
    <fullName>Type_de_panel__c</fullName>
    <formula>TEXT(Foyer_paneliste__r.Referentiel_Panel__r.Type_de_panel__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type de panel</label>
    <type>Text</type>
</CustomField>