force-app/main/default/objects/Fidelisation__c/fields/Type_de_panel_Old__c.field-meta.xml
<CustomField>
    <fullName>Type_de_panel_Old__c</fullName>
    <label>Type de panel Old</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MMAT</fullName>
            </value>
            <value>
                <fullName>PaME</fullName>
            </value>
            <value>
                <fullName>AIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>