force-app/main/default/objects/Fidelisation__c/recordTypes/Credit.recordType-meta.xml
<RecordType>
    <fullName>Credit</fullName>
    <active>true</active>
    <description>Points de fidélisation qu&apos;on ajoute sur le compte</description>
    <label>Crédit</label>
</RecordType>