force-app/main/default/objects/Fidelisation__c/recordTypes/Debit.recordType-meta.xml
<RecordType>
    <fullName>Debit</fullName>
    <active>true</active>
    <description>Points de fidélisation qu&apos;on retire du compte</description>
    <label>Débit</label>
</RecordType>