force-app/main/default/objects/Fidelisation__c/validationRules/RV03_foyer_paneliste_freeze.validationRule-meta.xml
<ValidationRule>
    <fullName>RV03_foyer_paneliste_freeze</fullName>
    <active>true</active>
    <description>Règle qui empêche de créditer des points à un foyer freezé</description>
    <errorConditionFormula>AND(
				!$User.Bypass_validation_rules__c,
				!$User.Bypass_RDD__c,
				Foyer_paneliste__r.Freeze__c,
                               NOT(Foyer_paneliste__r.A_anonymiser__c),   
				RecordType.Name = $Label.FID_Type_d_enregistrement_Credit
)</errorConditionFormula>
    <errorMessage>Aucun point ne peut être créditer sur un foyer freezé</errorMessage>
</ValidationRule>