force-app/main/default/objects/Fidelisation__c/validationRules/RV06_solde_insuffisant.validationRule-meta.xml
<ValidationRule>
    <fullName>RV06_solde_insuffisant</fullName>
    <active>true</active>
    <description>Règle qui empêche de débiter une somme supérieure au solde de points du foyer</description>
    <errorConditionFormula>AND(
	!$User.Bypass_validation_rules__c,
	RecordType.Name = $Label.FID_Type_d_enregistrement_Debit,
	OR(
		AND(
			ISNEW(),
			Foyer__r.Solde_de_points__c &lt; Points_debites__c
		),
		AND(
			NOT(ISNEW()),
			PRIORVALUE(Points_debites__c) &lt; Points_debites__c,
			Foyer__r.Solde_de_points__c &lt; (Points_debites__c - PRIORVALUE(Points_debites__c))
		)
	)
)</errorConditionFormula>
    <errorDisplayField>Points_debites__c</errorDisplayField>
    <errorMessage>Le solde de points est inférieur au nombre de points commandés</errorMessage>
</ValidationRule>