force-app/main/default/objects/Fidelisation__c/validationRules/RV09_Foyer_FoyerPaneliste_From_Requete.validationRule-meta.xml
<ValidationRule>
    <fullName>RV09_Foyer_FoyerPaneliste_From_Requete</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    !$User.Bypass_validation_rules__c,
				!$User.Bypass_RDD__c,
    Requete__c != null,
    OR(
        Foyer_paneliste__c != Requete__r.Foyer_paneliste__c,
        Foyer__c != Requete__r.AccountId
    )
)</errorConditionFormula>
    <errorMessage>Les champs foyer et le foyer panéliste doivent correspondre à ceux de la requête associé</errorMessage>
</ValidationRule>