force-app/main/default/objects/Fidelisation__c/validationRules/RV13_Type_MVT_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>RV13_Type_MVT_obligatoire</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Bypass_validation_rules__c,

	ISPICKVAL(Type_de_mouvement__c,&apos;&apos;)
)</errorConditionFormula>
    <errorDisplayField>Type_de_mouvement__c</errorDisplayField>
    <errorMessage>Merci de renseigner le type de mouvement.</errorMessage>
</ValidationRule>