force-app/main/default/objects/Fidelisation__c/validationRules/Type_mouvement_Oblig.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_mouvement_Oblig</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
!$User.Bypass_validation_rules__c,
RecordType.Name = $Label.FID_Type_d_enregistrement_Credit,
				ISPICKVAL(	Type_de_mouvement__c ,&apos;&apos;) 
				)</errorConditionFormula>
    <errorDisplayField>Type_de_mouvement__c</errorDisplayField>
    <errorMessage>Le type de mouvement est obligatoire</errorMessage>
</ValidationRule>