force-app/main/default/objects/Fidelisation__c/listViews/Credits_automatiques.listView-meta.xml
<ListView>
    <fullName>Credits_automatiques</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Points_credites__c</columns>
    <columns>Motif_de_credit__c</columns>
    <columns>Foyer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fidelisation__c.Credit</value>
    </filters>
    <filters>
        <field>Type_de_panel__c</field>
        <operation>equals</operation>
        <value>AIP</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/13/2023 12:00 AM</value>
    </filters>
    <label>Crédits automatiques</label>
</ListView>