force-app/main/default/objects/Fidelisation__c/listViews/Debits_traites.listView-meta.xml
<ListView>
    <fullName>Debits_traites</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Points_debites__c</columns>
    <columns>Origine_de_la_commande__c</columns>
    <columns>Requete__c</columns>
    <columns>Foyer__c</columns>
    <columns>Composition_du_foyer__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Commentaire__c</field>
        <operation>equals</operation>
        <value>Eth</value>
    </filters>
    <label>Débits traités</label>
</ListView>