force-app/main/default/objects/Fidelisation__c/listViews/Quiz_r_gle_d_or.listView-meta.xml
<ListView>
    <fullName>Quiz_r_gle_d_or</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Motif_de_credit__c</field>
        <operation>equals</operation>
        <value>8</value>
    </filters>
    <label>Quiz règle d&apos;or</label>
</ListView>