force-app/main/default/objects/Fidelisation__c/listViews/Tous_les_credits.listView-meta.xml
<ListView>
    <fullName>Tous_les_credits</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Points_credites__c</columns>
    <columns>Motif_de_credit__c</columns>
    <columns>Type_de_mouvement__c</columns>
    <columns>Foyer__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Fidelisation__c.Credit</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>4/1/2023 12:00 AM</value>
    </filters>
    <filters>
        <field>Type_de_panel__c</field>
        <operation>equals</operation>
        <value>MMT</value>
    </filters>
    <label>Tous les crédits</label>
</ListView>