force-app/main/default/objects/Fidelisation__c/listViews/Toutes_les_fidelisations.listView-meta.xml
<ListView>
    <fullName>Toutes_les_fidelisations</fullName>
    <columns>Foyer__c</columns>
    <columns>Date_de_traitement__c</columns>
    <columns>NAME</columns>
    <columns>Type_de_mouvement__c</columns>
    <columns>Motif_de_credit__c</columns>
    <columns>Points_credites__c</columns>
    <columns>Points_debites__c</columns>
    <columns>Solde_de_points_a_creation__c</columns>
    <columns>Foyer_paneliste__c</columns>
    <columns>Type_de_panel__c</columns>
    <columns>Composition_du_foyer__c</columns>
    <columns>Individu_paneliste__c</columns>
    <columns>Commentaire__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les fidélisations</label>
</ListView>